--- a/DonorAppVersion2/Views/Donor/DonorProfile.cshtml
+++ b/DonorAppVersion2/Views/Donor/DonorProfile.cshtml
@@ -63,3 +63,7 @@
 
 </div><br /><br />
 
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
