--- a/DonorAppVersion2/Views/Parent/AddDonorCycle.cshtml
+++ b/DonorAppVersion2/Views/Parent/AddDonorCycle.cshtml
@@ -84,7 +84,7 @@
         </div>
         <div class="col-md-4">
             <h2>Instructions</h2>
-            <h4>Read befor you add your donor cycle</h4>
+            <h4>Read before you add your donor cycle</h4>
             <hr />
             <ul>
                 <li>Only add donor cycle if you have all the information needed in this form.</li>
@@ -99,9 +99,10 @@
 }
 
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
 
 <script type="text/javascript">
     $(function () {
