--- a/DonorAppVersion2/Views/Shared/_donorLayout.cshtml
+++ b/DonorAppVersion2/Views/Shared/_donorLayout.cshtml
@@ -30,7 +30,7 @@
                         <a href="~/Donor/DonorProfile">Profile</a>
                     </li>
                     <li>
-                        <a href="~/Donor/Settings">Settings</a>
+                        <a href="#">Settings</a>
                     </li>
                 </ul>
 
