--- a/DonorAppVersion2/Views/Shared/_parentLayout.cshtml
+++ b/DonorAppVersion2/Views/Shared/_parentLayout.cshtml
@@ -19,7 +19,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Donor 21", "Dashboard", "Parent", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Parent Portal : Donor 21", "Dashboard", "Parent", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -27,7 +27,7 @@
                         <a href="~/Parent/Dashboard">Dashboard</a>
                     </li>
                     <li>
-                        <a href="~/Parent/Dashboard">Add Your Clinic / Agency</a>
+                        <a href="~/Parent/AddClinic">Add Clinic</a>
                     </li>
                     <li>
                         <a href="~/Parent/ParentProfile">Profile</a>
