--- a/DonorAppVersion2/Views/Donor/Login.cshtml
+++ b/DonorAppVersion2/Views/Donor/Login.cshtml
@@ -67,6 +67,7 @@
     </div>
 }
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
