--- a/DonorAppVersion2/Views/Donor/Registration.cshtml
+++ b/DonorAppVersion2/Views/Donor/Registration.cshtml
@@ -136,10 +136,8 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to Login", "Login")
-</div>
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
