--- a/DonorAppVersion2/Views/Parent/Dashboard.cshtml
+++ b/DonorAppVersion2/Views/Parent/Dashboard.cshtml
@@ -104,3 +104,9 @@
         </div>
     </div>
 </div>
+
+
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
