--- a/DonorAppVersion2/Views/Parent/Registration.cshtml
+++ b/DonorAppVersion2/Views/Parent/Registration.cshtml
@@ -140,5 +140,7 @@
     </div>
 }
 
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
