--- a/DonorAppVersion2/Views/Parent/SessionTimeout.cshtml
+++ b/DonorAppVersion2/Views/Parent/SessionTimeout.cshtml
@@ -17,3 +17,8 @@
     </div>
     <div class="col-md-4"></div>
 </div>
+
+<script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
+<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
