--- a/DonorAppVersion2/Views/Parent/Verification.cshtml
+++ b/DonorAppVersion2/Views/Parent/Verification.cshtml
@@ -68,6 +68,7 @@
 }
 
 
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
+<script src="~/Scripts/jquery-3.2.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
