--- a/DonorAppVersion2/Views/Donor/Dashboard.cshtml
+++ b/DonorAppVersion2/Views/Donor/Dashboard.cshtml
@@ -41,7 +41,7 @@
 
 
         </div><hr />
-        <h4>Your Donor Cycle Involvment</h4>
+        <h4>Your Donor Cycle Involvement</h4>
         <table class="table table-striped" style="font-size:xx-small;">
 
             @if (donorcycleid > 0)
@@ -61,7 +61,7 @@
             {
                 <tr>
                     <td>
-                        <text> You dont have any active donor cycles added yet </text>
+                        <text> No recipient has added you to their donor cycle yet! </text>
                     </td>
                 </tr>
             }
