--- a/DonorAppVersion2/Views/Parent/Verification.cshtml
+++ b/DonorAppVersion2/Views/Parent/Verification.cshtml
@@ -23,6 +23,7 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <label class="label label-danger">@ViewBag.ErrorMessage</label>
+                <label class="label label-warning">@ViewBag.WarningMessage</label>
                 <label class="label label-success">@ViewBag.SuccessMessage</label>
             </div>
         </div>
