--- a/DonorAppVersion2/Views/Shared/_Layout.cshtml
+++ b/DonorAppVersion2/Views/Shared/_Layout.cshtml
@@ -6,11 +6,14 @@
     <title>@ViewBag.Title</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+
+
    
-    }
 </head>
 <body>
+        @RenderSection("scripts", required:false);
+
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -36,8 +39,8 @@
             </div>
         </div>
     </div>
-
-    <div class="container body-content">        
+    <div class="container body-content">
+     
         @RenderBody()
         <br /><br />
         <hr />
@@ -45,8 +48,5 @@
             <p style="text-align:center">&copy; @DateTime.Now.Year - Donor21</p>
         </footer>
     </div>
-
-    <script src="~/Scripts/jquery-3.2.1.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
